# trading-evaluation

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  primary_benchmark_candidate_20260519.json  promotion_benchmark_candidate_policy_replay.json
docs/: 00_scope.md  01_context.md  02_architecture.md  03_contracts.md  04_task.md  05_decision.md  06_memory.md  20_benchmark_contracts.md  20_replay_contracts.md  21_primary_benchmark_candidate.md  22_benchmark_dataset_preparation.md  22_replay_dataset_preparation.md  30_fold_settlement.md  40_promotion_eligibility.md  50_activation.md  50_promotion_readiness.md
replays/: README.md  promotion_replay_candidate_policy.json
scripts/: README.md
scripts/evaluation/: build_fold_settlement_run.py  build_model_activation_record.py  build_promotion_evaluation_review.py  build_promotion_readiness_record.py  build_replay_portfolio_trace_audit.py  freeze_replay_dataset.py  prepare_benchmark_dataset.py  prepare_replay_dataset.py  run_benchmark_acquisition.py  run_replay_acquisition.py  run_replay_execution.py  run_replay_runtime_dry_run.py  validate_benchmark_contract.py  validate_replay_contract.py
src/: README.md
src/trading_evaluation/: __init__.py  activation.py  benchmark.py  benchmark_acquisition.py  promotion.py  (+8 more)
tests/: README.md  test_activation.py  test_benchmark.py  test_benchmark_acquisition.py  test_benchmark_dataset.py  test_execution_runtime.py  test_promotion.py  test_promotion_review.py  test_replay.py  test_replay_acquisition.py  test_replay_dataset.py  test_replay_execution.py  test_settlement.py
(+3 files in other folders)
