[build-system]
requires = ["setuptools>=69,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-evaluation"
version = "0.1.0"
description = "Independent replay, fold settlement, promotion-eligibility, and promotion-readiness contracts for the trading system."
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
